# rectangle_area_calculator_CI_CD_process

./: Jenkinsfile  README.md  pyproject.toml  rectangle_calculator.py
ci_megre_to_dev_to_main/: Jenkinsfile
test/: test_rectangle_calculator.py
tests/: test_rectangle_calculator.py
