[tool.poetry]
name = "rectangle-calculator"
version = "0.1.0"
description = "Simple rectangle area calculator"
authors = ["Norbert00 <norbert.jurek@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
rectangle = 'rectangle_calculator.rectangle_calculator:main'
